--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -13,6 +13,16 @@
 <p>
   <strong>Picture:</strong>
   <%= image_tag(@subject.picture_url, :width => 600) if @subject.picture.present? %>
+  <h3>Comments</h3>
+  <% @comments.each do |comment| %>
+	  	<div>
+	  	  <strong><%= comment.user_name %></strong>
+	   	  <br />
+	  	  <p><%= comment.body %></p>
+	      <p><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+	  	</div>
+  <% end %>
+  <%= render 'comments/form' %>
 </p>
 
 <%= link_to 'Edit', edit_subject_path(@subject) %> |
