Thumbnails on subjects added

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= subject.name %></td>
         <td><%= subject.description %></td>
-        <td><%= subject.picture %></td>
+        <td><%= image_tag subject.picture_url(:thumb) if subject.picture? %></td>
         <td><%= link_to 'Show', subject %></td>
         <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
         <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
