--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	    </div>
 	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="/ideas">Materias</a></li>
+	        <li class="active"><a href="/subjects">Materias</a></li>
 	      </ul>
 	    </div>
 	  </div>
