--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="/subjects">Materias</a></li>
+	        <li ><%= link_to 'Agregar Materia', new_subject_path %></li>
 	      </ul>
 	    </div>
 	  </div>
