--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@
 	        <li ><%= link_to 'Agregar Materia', new_subject_path %></li>
 	        <p class="navbar-text pull-right">
 	        <% if user_signed_in? %>
-	          Logged in as <strong><%= current_user.email %></strong>.
-	          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-	          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+	          Sesión iniciada bajo: <strong><%= current_user.email %></strong>.
+	          <%= link_to 'Editar perfil', edit_user_registration_path, :class => 'navbar-link' %> |
+	          <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 	        <% else %>
 	          <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
 	          <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
