--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,9 @@
 	    </div>
 	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="/subjects">Materias</a></li>
-	        <li ><%= link_to 'Agregar Materia', new_subject_path %></li>
+	<!--    <li class="active"><a href="/subjects">Materias</a></li> -->
+			<li><a href="/subjects">Materias</a></li>
+	        <li><%= link_to 'Agregar Materia', new_subject_path %></li>
 	        <p class="navbar-text pull-right">
 	        <% if user_signed_in? %>
 	          Sesión iniciada bajo: <strong><%= current_user.email %></strong>.
