--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -2,10 +2,10 @@
 
 <div class="row">
   <div class="col-md-9">
-    <%= image_tag(@subject.picture_url, width: '100%') if @subject.picture.present? %>
-  </div>
+    <%= image_tag(@subject.picture_url, :size => "240x150", width: '100%') if @subject.picture.present? %>
+ <!-- </div>
 
-  <div class="col-md-3">
+  <div class="col-md-3"> -->
     <p><b>Name: </b><%= @subject.name %></p>
     <p><b>Description: </b><%= @subject.description %></p>
     <p>
