--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,22 @@
-<h2>Sign up</h2>
+<h2>Crea una cuenta</h2>
 
+<div class="col-md-4">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+  <blockquote>
+  <div class="form-group"><%= f.label :email %><br />
+  	<%= f.email_field :email, autofocus: true %></div>
+  <div class="form-group"><%= f.label :Contraseña %> 
+  	<% if @validatable %><i>(<%= @minimum_password_length %> caracteres mínimo)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
+  <div class="form-group"><%= f.label :Confirmación_de_contraseña %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  </blockquote>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="form-group"><%= f.submit "Registrarse", class:"btn btn-primary btn-sm" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="col-md-8"></div>
