--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -3,13 +3,10 @@
 <div class="row">
   <div class="col-md-9">
     <%= image_tag(@subject.picture_url, :size => "240x150", width: '100%') if @subject.picture.present? %>
- <!-- </div>
-
-  <div class="col-md-3"> -->
-    <p><b>Name: </b><%= @subject.name %></p>
-    <p><b>Description: </b><%= @subject.description %></p>
+    <p><b>Nombre: </b><%= @subject.name %></p>
+    <p><b>Descripción: </b><%= @subject.description %></p>
     <p>
-      <%= link_to 'Edit', edit_subject_path(@subject) %> |
+      <%= link_to 'Editar', edit_subject_path(@subject) %> |
       <%= link_to 'Destroy', @subject, data: { confirm: 'Are you sure?' }, method: :delete %> |
       <%= link_to 'Back', subjects_path %>
     </p>
