--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -35,7 +35,7 @@ body{
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-}/*
+}
 
 body > footer{
 	background-color: white;
@@ -50,4 +50,13 @@ body > footer{
   	bottom: 0;
   	left: 0;
 }
-*/
+
+
+.elliptical {
+	border: 5px solid #dcd6bf;
+	padding: 20px;
+	width: 2000px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+}
