--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -4,6 +4,7 @@
 		<blockquote>
 			<div class="form-group">Nombre de la materia</div><div><%= f.text_field :name %></div>
 			<div class="form-group">Descripción</div><div><%= f.text_field :description %></div>
+			<div class="form-group">Código</div><div><%= f.text_field :code %></div>
 	    	<div class="form-group"> Imagen representativa </div><div><%= f.file_field :picture %></div>
 	    	<div><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
 		</blockquote>
