--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -5,6 +5,7 @@
     <%= image_tag(@subject.picture_url, :size => "240x150", width: '100%') if @subject.picture.present? %>
     <p><b>Nombre: </b><%= @subject.name %></p>
     <p><b>Descripción: </b><%= @subject.description %></p>
+    <p><b>Código: </b><%= @subject.code %></p>
     <p>
       <%= link_to 'Editar', edit_subject_path(@subject) %> |
       <%= link_to 'Destroy', @subject, data: { confirm: 'Are you sure?' }, method: :delete %> |
