--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -6,6 +6,7 @@
     <p><b>Nombre: </b><%= @subject.name %></p>
     <p><b>Descripción: </b><%= @subject.description %></p>
     <p><b>Código: </b><%= @subject.code %></p>
+    <p><b>Año: </b><%= @subject.year %></p>
     <h3>Comments</h3>
     <% @comments.each do |comment| %>
        <div>
