--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -10,13 +10,14 @@
       </ul>
     </div>
   <% end %>
-
+<!--
   <div class="field">
     <%= f.label :user_name %><br>
     <%= f.text_field :user_name %>
   </div>
+-->
   <div class="field">
-    <%= f.label :body %><br>
+<!--    <%= f.label :body %><br> -->
     <%= f.text_area :body %>
     <%= f.hidden_field :subject_id %>
   </div>
