Modifications to subjects tables for space issues between them and the footer

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -13,7 +13,7 @@ PONER UN RECUADRO PARA CADA MATERIA QUE SEA DIRECTAMENTE UN LINK A LA MISMA
     </div>
     <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
-        <table class="table table-bordered">
+        <table class="table table-bordered table-condensed">
           <thead>
             <tr>
               <th>Nombre</th> <!--
@@ -50,7 +50,7 @@ PONER UN RECUADRO PARA CADA MATERIA QUE SEA DIRECTAMENTE UN LINK A LA MISMA
     </div>
     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
-        <table class="table table-bordered">
+        <table class="table table-bordered table-condensed">
           <thead>
             <tr>
               <th>Nombre</th>
@@ -87,7 +87,7 @@ PONER UN RECUADRO PARA CADA MATERIA QUE SEA DIRECTAMENTE UN LINK A LA MISMA
     </div>
     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
       <div class="panel-body">
-        <table class="table table-bordered">
+        <table class="table table-bordered table-condensed">
           <thead>
             <tr>
               <th>Nombre</th>
@@ -124,7 +124,7 @@ PONER UN RECUADRO PARA CADA MATERIA QUE SEA DIRECTAMENTE UN LINK A LA MISMA
     </div>
     <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
-        <table class="table table-bordered">
+        <table class="table table-bordered table-condensed">
           <thead>
             <tr>
               <th>Nombre</th>
@@ -161,7 +161,7 @@ PONER UN RECUADRO PARA CADA MATERIA QUE SEA DIRECTAMENTE UN LINK A LA MISMA
     </div>
     <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
       <div class="panel-body">
-        <table class="table table-bordered">
+        <table class="table table-bordered table-condensed">
           <thead>
             <tr>
               <th>Nombre</th>
