--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,57 @@
-<h2>Crea una cuenta</h2>
-
-<div class="col-md-4">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <blockquote>
-  <div class="form-group"><%= f.label :email %><br />
-  	<%= f.email_field :email, autofocus: true %></div>
-  <div class="form-group"><%= f.label :Contraseña %> 
-  	<% if @validatable %><i>(<%= @minimum_password_length %> caracteres mínimo)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-  <div class="form-group"><%= f.label :Confirmación_de_contraseña %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-  </blockquote>
-
-  <div class="form-group"><%= f.submit "Registrarse", class:"btn btn-primary btn-sm" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<h2 class="subtitles">Crea una cuenta</h2>
+<div class="container-fluid">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.label "Nombre" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.text_field :name, autofocus: true , class:"form-control" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.label "Apellido" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.text_field :surname, autocomplete: true , class:"form-control" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.label "Email" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.email_field :email, autocomplete: true , class:"form-control" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <% if @validatable %>
+        <div class="col-xs-6 col-md-6"><%= f.label "Contraseña" %><i>(<%= @minimum_password_length %> caracteres mínimo)</i></div>
+      <% end %>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.password_field :password, autocomplete: "off" , class:"form-control" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.label "Confirmación_de_contraseña" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %></div>
+    </div>
+    <div class="row" style="padding-top:1em">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6 form-group"><%= f.submit "Registrarse", class:"btn btn-primary btn-sm" %></div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-md-3"></div>
+      <div class="col-xs-6 col-md-6"><%= render "devise/shared/links" %></div>
+    </div>
+  </div>
+  <% end %>
 </div>
-<div class="col-md-8"></div>
