Major visual modifications to subject. Still have to set up the year with the radio button

--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,15 +1,81 @@
-<h1>Nueva materia</h1>
-<div class="panel=body">
+<h2 class="subtitles">Nueva materia</h2>
+<div class="container-fluid">
 	<%= form_for(@subject) do |f| %>
-		<blockquote>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Nombre" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :name, autofocus: true, class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Descripción" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_area :description, class:"form-control", maxlength:"5000" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Código" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :code, autocomplete: "off", class:"form-control" %></div>
+		</div>
+
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Año" %></div>
+		</div>
+		<div class="row">
+			<div class="col-xs-3 col-md-3"></div>
+			<%= f.label :year, "Primero", :value => "true"  %>
+		    <%= f.radio_button :year, true, :checked => true %>
+		    <%= f.label :year, "Segundo", :value => "false" %>
+		    <%= f.radio_button :year, false %>
+		    <%= f.label :year, "Tercero", :value => "false" %>
+		    <%= f.radio_button :year, false %>
+		    <%= f.label :year, "Cuarto", :value => "false" %>
+		    <%= f.radio_button :year, false %>
+		    <%= f.label :year, "Quinto", :value => "false" %>
+		    <%= f.radio_button :year, false %>
+		</div>
+
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Orden" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :int_ord, autocomplete: "off", class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Imagen representativa" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.file_field :picture, class:"form-control" %></div>
+		</div>
+		<div class="row" style="padding-top:1em">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.submit "Publicar", class:"btn btn-primary btn-sm" %></div>
+		</div>
+		<div class="row" style="padding-top:1em">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= link_to 'Volver al listado de materias', subjects_path %></div>
+		</div>
+<!--
+
 			<div class="form-group">Nombre de la materia</div><div><%= f.text_field :name %></div>
 			<div class="form-group">Descripción</div><div><%= f.text_area :description %></div>
 			<div class="form-group">Código</div><div><%= f.text_field :code %></div>
 			<div class="form-group">Año</div><div><%= f.text_field :year %></div>
 			<div class="form-group">Orden</div><div><%= f.text_field :int_ord %></div>
 	    	<div class="form-group"> Imagen representativa </div><div><%= f.file_field :picture %></div>
-	    </blockquote>
-	    <div><%= f.submit "Publicar", class:"btn btn-primary btn-sm" %></div>
+	    <div><%= f.submit "Publicar", class:"btn btn-primary btn-sm" %></div> -->
 	<%end%>
 </div>
-<div><%= link_to 'Volver al listado de materias', subjects_path %></div>
