--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,7 +1,63 @@
-<h1>Editar materia</h1>
-<div class="panel=body">
+<h2 class="subtitles">Editar materia</h2>
+<div class="container-fluid">
 	<%= form_for(@subject) do |f| %>
-		<blockquote>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Nombre" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :name, autofocus: true, class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Descripción" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_area :description, class:"form-control", maxlength:"5000" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Código" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :code, autocomplete: "off", class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Año" %></div>
+		</div>
+		<div class="row">
+			<div class="col-xs-3 col-md-3"></div>
+			<div class="col-xs-6 col-md-6"><%= f.text_field :year, autocomplete: "off", class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Orden" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.text_field :int_ord, autocomplete: "off", class:"form-control" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.label "Imagen representativa" %></div>
+		</div>
+		<div class="row">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.file_field :picture, class:"form-control" %></div>
+		</div>
+		<div class="row" style="padding-top:1em">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
+		</div>
+		<div class="row" style="padding-top:1em">
+		  <div class="col-xs-3 col-md-3"></div>
+		  <div class="col-xs-6 col-md-6"><%= link_to 'Volver al listado de materias', subjects_path %></div>
+		</div>
+<!--
 			<div class="form-group">Nombre de la materia</div><div><%= f.text_field :name %></div>
 			<div class="form-group">Descripción</div><div><%= f.text_area :description %></div>
 			<div class="form-group">Código</div><div><%= f.text_field :code %></div>
@@ -9,8 +65,10 @@
 			<div class="form-group">Orden</div><div><%= f.text_field :int_ord %></div>
 	    	<div class="form-group"> Imagen representativa </div><div><%= f.file_field :picture %></div>
 	    	<div><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
-		</blockquote>
-	<%end%>
+-->
+	<% end %>
 </div>
+<!--
 <%= button_to "Volver a materia", @subject, :method => "get", class:"btn btn-primary btn-sm" %> 
 <%= button_to 'Listado de materias', subjects_path, :method => "get", class:"btn btn-primary btn-sm" %>
+-->
